# plan

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  crates.js  index.html  rust-toolchain  search-index.js  settings.html  source-files.js
kalloc/: Cargo.toml  all.html  index.html  sidebar-items.js
kalloc/buddy/: index.html  sidebar-items.js  struct.Allocator.html  struct.BuddySystem.html  struct.MultiBuddySystem.html
kalloc/cached/: index.html  struct.Allocator.html  struct.Cached.html
kalloc/consts/: index.html  struct.B0.html  struct.B1.html  struct.Z0.html  type.False.html  type.N1.html  type.N10.html  type.N100.html  type.N1000.html  type.N10000.html  type.N100000.html  type.N1000000.html  type.N10000000.html  type.N100000000.html  type.N1000000000.html  type.N10000000000.html  type.N100000000000.html  type.N1000000000000.html  type.N10000000000000.html  type.N100000000000000.html  type.N1000000000000000.html  type.N10000000000000000.html  type.N100000000000000000.html  type.N1000000000000000000.html  type.N1001.html  type.N1002.html  type.N1003.html  type.N1004.html  type.N1005.html  type.N1006.html  type.N1007.html  type.N1008.html  type.N1009.html  type.N101.html  type.N1010.html  type.N1011.html  type.N1012.html  type.N1013.html  type.N1014.html  type.N1015.html  (+3242 more)
kalloc/guard/: index.html  sidebar-items.js  struct.AllocGuard.html
kalloc/list/: index.html  sidebar-items.js  struct.Cursor.html  struct.CursorMut.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  struct.List.html
kalloc/src/: buddy.rs  cached.rs  guard.rs  lib.rs  list.rs  rawlist.rs  vecque.rs  wrapper.rs
kalloc/vecque/: index.html  struct.Vecque.html
kalloc/wrapper/: enum.TryReserveError.html  fn.deque_push_back.html  fn.deque_push_front.html  fn.map_insert.html  fn.r2a.html  fn.str_push.html  fn.vec_push.html  fn.vec_shrink_to_fit.html  index.html  sidebar-items.js  struct.AllocError.html  struct.HashMap.html  struct.String.html  struct.Vec.html  struct.VecDeque.html
kcore/: Cargo.toml  all.html  attr.async_trait_try.html  index.html  macro.from_bytes.html  sidebar-items.js
kcore/chan/: enum.AMode.html  enum.ChanKind.html  enum.ChanType.html  enum.Perm.html  enum.QType.html  index.html  sidebar-items.js  struct.CFlag.html  struct.Chan.html  struct.ChanId.html  struct.ChanInner.html  struct.ChanKey.html  struct.Dirent.html  struct.OMode.html  struct.QType.html  struct.Qid.html
kcore/dev/: index.html  sidebar-items.js  struct.Dirent.html  trait.Device.html
kcore/error/: enum.Error.html  index.html  sidebar-items.js  type.Result.html
kcore/mnt/: enum.Path.html  index.html  sidebar-items.js  struct.MountChan.html  struct.MountSpace.html  struct.MountUnion.html
kcore/src/: chan.rs  dev.rs  error.rs  lib.rs  mnt.rs  pager.rs  utils.rs  vecque.rs  vm.rs
kcore/utils/: enum.Error.html  fn.arc_new.html  fn.deque_push_back.html  fn.deque_push_front.html  fn.intersect.html  fn.map_insert.html  fn.round_down.html  fn.round_up.html  fn.vec_push.html  fn.vec_shrink_to_fit.html  index.html  sidebar-items.js
kcore/vecque/: index.html  sidebar-items.js  struct.Vecque.html
kcore/vm/: enum.Segment.html  enum.VmFaultKind.html  index.html  sidebar-items.js  struct.AddressSpace.html  struct.Page.html  struct.SegmentInner.html  struct.VmObjectEntry.html  struct.VmObjectEntryAdapter.html  struct.VmSpace.html  trait.PageTable.html
kdevice/: Cargo.toml  all.html  index.html  macro.cache_impl!.html  macro.cache_impl.html  macro.from_bytes!.html  macro.from_bytes.html  sidebar-items.js
kdevice/benches/: fat.rs
kdevice/block/: constant.BSIZE.html  index.html  sidebar-items.js  struct.BlockSlot.html  struct.Blocks.html  trait.BlockBus.html
kdevice/cache/: enum.CState.html  enum.CacheState.html  fn.cache_get.html  fn.cache_invalidate.html  fn.cache_stat.html  index.html  sidebar-items.js  struct.CEntry.html  struct.CGuard.html  struct.CNode.html  struct.CNodePtr.html  struct.CacheData.html  struct.CacheEntry.html  struct.CacheGuard.html  struct.CacheNode.html  struct.CacheNodePtr.html  trait.Cache.html
kdevice/fat/: index.html  sidebar-items.js  struct.FAT.html
kdevice/log/: constant.BSIZE.html  constant.LOGMAGIC.html  constant.LOGSIZE.html  constant.MAXEXOPBLOCKS.html  constant.MAXOPBLOCKS.html  constant.NBUF.html  index.html  sidebar-items.js  struct.Log.html  struct.OpGuard.html
kdevice/pipe/: index.html  sidebar-items.js  struct.Pipe.html
kdevice/root/: index.html  (+2 more)
kmalloc/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.Allocator.html
ksched/: Cargo.toml  all.html  index.html  sidebar-items.js
ktest/: Cargo.toml  all.html  fn.rand_int.html  fn.rand_str.html  fn.run_multi.html  index.html  sidebar-items.js
(+3529 files in other folders)
