[package]
name = "kalloc"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcs = { git = "https://github.com/Hongqin-Li/mcs-rs" }
typenum = "1.13.0"
hashbrown = "0.11"

[dev-dependencies]
rand = "0.8.3"