[package]
name = "kalloc"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
typenum = "1.13.0"
hashbrown = "0.11"
async-trait = { git = "git://github.com/Hongqin-Li/async-trait" }

[dev-dependencies]
rand = "0.8.3"
