[package]
name = "kcore"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
hashbrown = "0.11"
async-trait = { git = "https://github.com/Hongqin-Li/async-trait" }