[package]
name = "kcore"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
kalloc = { path = "../kalloc" }
ksched = { path = "../ksched" }
static_assertions = "1.1.0"
hashbrown = "0.11"
intrusive-collections = "0.9.0"
async-trait = { git = "git://github.com/Hongqin-Li/async-trait" }

[dev-dependencies]
rand = "0.8.3"
tempfile = "3.2.0"


