[package]
name = "kdevice"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
static_assertions = "1.1.0"
intrusive-collections = "0.9.0"
async-trait = { git = "https://github.com/Hongqin-Li/async-trait" }
kalloc = { path = "../kalloc" }
kcore = { path = "../kcore" }
ksched = { path = "../ksched" }

[dev-dependencies]
rand = "0.8.3"
tempfile = "3.2.0"
criterion = "0.3"
criterion-macro = "0.3"
ktest = { path = "../ktest" }

[[bench]]
name = "fat"
