[package]
name = "kmalloc"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcs = { git = "https://github.com/Hongqin-Li/mcs-rs" }

[dev-dependencies]
# lazy_static = "1.4.0"