[package]
name = "ksched"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
spin = "0.5.2"
# executor-macros = { version="0.1", path = "../executor-macros" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"]}
fallible_collections = "0.4.0"
