[package]
name = "ksched"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.13", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"]}
kalloc = { path = "../kalloc" }
intrusive-collections = "0.9.0"

[dev-dependencies]
rand = "0.8.3"