[package]
name = "ksched"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kalloc = { path = "../kalloc" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"]}
intrusive-collections = { version = "0.9.0", features = ["alloc", "nightly"] }
spin = { version = "0.9.2", features = ["lock_api"] }
lock_api = { version = "0.4", features = ["nightly"] }
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
rand = "0.8.3"