[package]
name = "ktest"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kalloc = { path = "../kalloc" }
kcore = { path = "../kcore" }
ksched = { path = "../ksched" }
async-trait = { git = "https://github.com/Hongqin-Li/async-trait" }
rand = "0.8.3"
tempfile = "3.2.0"
